Color Sensor Test: SUCCESS!!!!!!!!!!!!!!

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -8,8 +8,8 @@
 // please think carefully as to whether such customizations are really necessary
 // before doing so.
 
-
 // Custom definitions may go here
 
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+android { sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } } }
