--- a/TeamCode/src/main/AndroidManifest.xml
+++ b/TeamCode/src/main/AndroidManifest.xml
@@ -9,4 +9,6 @@
     package="org.firstinspires.ftc.teamcode"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <application/>
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
 </manifest>
